fixed bug where search input was becoming too wide and going below the logo

--- a/css/scss/layout.scss
+++ b/css/scss/layout.scss
@@ -392,7 +392,6 @@ $dark-grey: #828282;
 			position:absolute;
 			right:0px;
 			top:202px;
-
 		}
 		.logo {
 			margin-bottom:0;
@@ -447,6 +446,9 @@ $dark-grey: #828282;
 		-moz-border-radius-bottomleft: 0px;
 		border-bottom-left-radius: 0px;
 	}
+	.search input {
+		width:275px;
+	}
 }
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 	.page-header {
@@ -484,13 +486,10 @@ $dark-grey: #828282;
 		position:static;
 		width:100%;
 	}
-
 }
+
 @media only screen and (max-width: 320px) {
-	.hero {
-		/*margin-left:-10px !important;*/
-	}
-	.page-footer{
+.page-footer{
 		width:320px !important;
 		margin-left:-10px !important;
 	}
@@ -574,6 +573,7 @@ $dark-grey: #828282;
 .newdashboard {background-position:15px 17px;}
 .nowinthecloud {background-position:15px -131px;}
 .manageyourprofile {background-position:15px -280px;}
+
 @media only screen and (max-width: 479px) {
 	.container .hero {
 		padding:1em;
